--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h2{
 h3{
     font-size: 30px;
 }
-.button{
+.button-type{
     text-decoration: none;
     background-color: #FF5959;
     padding: 10px 30px;
