--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ h3{
     border-radius: 7px;
     color: white;
     font-weight: 500;
-    margin-top: 5px;
-    position: absolute;
+    margin-top: 15px;
+    display: inline-block;
 }
 .half-width{
     width: 50%;
@@ -113,7 +113,7 @@ h3{
     background-position-y: 350px;
 }
 .help{
-    padding-bottom: 200px;
+    padding-bottom: 100px;
     background-image: url(images/shape-6.png);
     background-repeat: no-repeat;
     background-size: 450px;
